<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.OnboardingFragment"
    android:background="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/close_onboarding_button"

            android:layout_marginTop="@dimen/margin_top_close_button"
            android:layout_marginStart="@dimen/margin_start_close_button"

            android:contentDescription="@string/description_close_onboarding_button">

        </ImageButton>

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/close_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/illuctration_first"
            android:layout_marginTop="@dimen/margin_top_img"
            android:contentDescription="@string/img_with_info" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_top_title_text"
            android:layout_marginStart="@dimen/margin_start_title_text"
            android:layout_marginEnd="@dimen/margin_end_title_text"

            android:text="@string/create_loan"
            android:textSize="@dimen/text_size_title"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/text_color"
            />
        <TextView
            android:id="@+id/description_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_top_description_first_text"
            android:layout_marginStart="@dimen/margin_end_description_first_text"
            android:layout_marginEnd="@dimen/margin_end_description_first_text"

            android:text="@string/create_loan_description_first"
            android:textSize="@dimen/text_size_description_first"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/text_color"

            />
        <TextView
            android:id="@+id/description_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_top_description_second_text"
            android:layout_marginStart="@dimen/margin_end_description_second_text"
            android:layout_marginEnd="@dimen/margin_end_description_second_text"


            android:text="@string/create_loan_description_second"
            android:textSize="@dimen/text_size_description_second"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/text_color"
            />
        
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_w"
            android:orientation="horizontal"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/back_button"
            android:background="@color/divider_onboarding"
            />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/back_button_text"

            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/button_text_size"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/text_color"
            />

        <ImageView
            android:id="@+id/nav_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_first"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:contentDescription="@string/nav_img_description" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next_button_text"

            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/button_text_size"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/text_color"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>