<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/id_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size_loan_id"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/text_color"

        android:layout_marginTop="@dimen/margin_top_loan_id"
        android:layout_marginStart="@dimen/margin_start_loan_id"

        tools:text="@string/id_loan_tools"
        />
    <TextView
        android:id="@+id/status_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_loan"

        android:layout_marginTop="@dimen/margin_top_loan_state"
        android:layout_marginStart="@dimen/margin_start_loan_state"
        android:layout_marginBottom="@dimen/margin_bottom_loan_state"

        android:textSize="@dimen/text_size_loan_state"
        android:fontFamily="@font/montserrat_regular"

        tools:text="@string/status_loan"
        />
    <TextView
        android:id="@+id/amount_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:textSize="@dimen/text_size_loan_amount"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/text_color"

        android:layout_marginTop="@dimen/margin_top_loan_amount"
        android:layout_marginEnd="@dimen/margin_end_loan_amount"

        tools:text="@string/amount_loan_tools"
        />
    <TextView
        android:id="@+id/date_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_loan"

        android:layout_marginTop="@dimen/margin_top_loan_date"
        android:layout_marginEnd="@dimen/margin_end_loan_date"
        android:layout_marginBottom="@dimen/margin_bottom_loan_date"

        android:textSize="@dimen/text_size_loan_date"
        android:fontFamily="@font/montserrat_regular"

        android:textColor="@color/text_color_loan_date"

        tools:text="@string/date_loan"
        />

</androidx.constraintlayout.widget.ConstraintLayout>