<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_text_logout_dialog"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:textSize="@dimen/test_size_logout_title"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="@dimen/margin_top_logout_title"
            android:layout_marginHorizontal="@dimen/margin_hor_logout_title"
            />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"

            android:text="@string/logout_button_text"
            android:textColor="@color/text_logout_buttons"

            app:layout_constraintTop_toBottomOf="@id/title_dialog"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="@dimen/margin_top_logout_button"
            android:textSize="@dimen/text_size_logout_button"
            android:fontFamily="@font/montserrat_medium"

            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"

            android:text="@string/cancel_button_text"
            android:textColor="@color/text_logout_buttons"

            app:layout_constraintTop_toBottomOf="@id/title_dialog"
            app:layout_constraintEnd_toStartOf="@id/logout_button"

            android:layout_marginTop="@dimen/margin_top_logout_button"
            android:textSize="@dimen/text_size_logout_button"
            android:fontFamily="@font/montserrat_medium"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>